<resources>
    <string name="app_name"> Adopt Me </string>
    <string name="title_home"> Home </string>
    <string name="title_mails"> Mails </string>
    <string name="title_favs"> Favs </string>
    <string name="title_user"> User </string>
    <string name="user_image"> User image </string>
    <string name="location"> Location </string>
    <string name="search"> Search </string>
    <string name="pet"> Pet </string>
    <string name="sex"> Sex </string>
    <string name="make_new_friends"> Make new Friends </string>
    <string name="auth_about"> Here you can meet your dream friend and joy with them </string>
    <string name="sign_in"> Sign in </string>
    <string name="sign_up"> Sign up </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username"> Username </string>
    <string name="password"> Password </string>
    <string name="retype_password"> Retype password </string>
</resources>